Fix alignment

--- a/app/assets/stylesheets/coaches.scss
+++ b/app/assets/stylesheets/coaches.scss
@@ -1,4 +1,5 @@
 .coach-registration {
+  text-align: center;
   color: #b7b7b7;
   background-color: rgba(0, 0, 0, 0.5);
   padding-bottom: 15px;
@@ -11,3 +12,31 @@
     margin-right: 10%;
   }
 }
+
+.header {
+  color: #b7b7b7;
+  background-color: rgba(0, 0, 0, 0.5);
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    display: inline;
+  }
+}
+
+
+
+// html, body {
+//  width: 100%;
+//  height: 100%;
+// }
+// html {
+//   display: table;
+// }
+// body {
+//  display: table-cell;
+//  vertical-align: middle;
+//  text-align: center;
+// }
