--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,14 +1,16 @@
-html, body {
- width: 100%;
- height: 100%;
-}
-html {
- display: table;
-}
-body {
- display: table-cell;
- vertical-align: middle;
- text-align: center;
+.home-intro {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    text-align: center;
+
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
 }
 
 .home-btn {
@@ -32,7 +34,6 @@ body {
     margin-right: 10%;
   }
 }
-
 
 
 html {
